# garmin-ai-coach

./: .gitignore  README.md  config.example.yaml  pyproject.toml
hr-based-rest/: manifest.xml
hr-based-rest/resources/: properties.xml
hr-based-rest/resources/settings/: settings.xml
hr-based-rest/resources/strings/: strings.xml
hr-based-rest/source/: HRRestFieldApp.mc  HRRestFieldView.mc
hr-coach-app/: manifest.xml
hr-coach-app/resources/: properties.xml
hr-coach-app/resources/settings/: settings.xml
hr-coach-app/resources/strings/: strings.xml
hr-coach-app/source/: HRCoachApp.mc  HRCoachDelegate.mc  HRCoachView.mc
scripts/: sleep_reminder.py
src/: config.py  main.py  setup.py
src/ai/: anomaly.py  charts.py  coach.py  gamification.py  impact.py  insights.py  notify.py  observations.py  pr_card.py  user_model.py  weekly_report.py
src/ai/prompts/: chat.md  morning.md  post_gym.md  post_ski.md  post_workout_update.md  realtime_coach.md  reflect.md  workout_plan.md  workout_structured.md
src/api/: server.py
src/bot/: agent.py  telegram.py
src/db/: models.py
src/garmin/: client.py  fit_parser.py  sync.py  workout.py
